[gd_scene load_steps=64 format=2]

[ext_resource path="res://Assets/Griffin/Idle/Griffin_Idle_11.png" type="Texture" id=1]
[ext_resource path="res://Assets/Griffin/Attack/Griffin_Attack_00.png" type="Texture" id=2]
[ext_resource path="res://Assets/Griffin/Attack/Griffin_Attack_01.png" type="Texture" id=3]
[ext_resource path="res://Assets/Griffin/Idle/Griffin_Idle_05.png" type="Texture" id=4]
[ext_resource path="res://Assets/Griffin/Attack/Griffin_Attack_02.png" type="Texture" id=5]
[ext_resource path="res://Assets/Griffin/Idle/Griffin_Idle_04.png" type="Texture" id=6]
[ext_resource path="res://Assets/Griffin/Attack/Griffin_Attack_03.png" type="Texture" id=7]
[ext_resource path="res://Assets/Griffin/Attack/Griffin_Attack_04.png" type="Texture" id=8]
[ext_resource path="res://Assets/Griffin/Idle/Griffin_Idle_01.png" type="Texture" id=9]
[ext_resource path="res://Assets/Griffin/Idle/Griffin_Idle_02.png" type="Texture" id=10]
[ext_resource path="res://Assets/Griffin/Idle/Griffin_Idle_06.png" type="Texture" id=11]
[ext_resource path="res://Assets/Griffin/Idle/Griffin_Idle_09.png" type="Texture" id=12]
[ext_resource path="res://Assets/Griffin/Idle/Griffin_Idle_03.png" type="Texture" id=13]
[ext_resource path="res://Assets/Griffin/Idle/Griffin_Idle_07.png" type="Texture" id=14]
[ext_resource path="res://Assets/Griffin/Idle/Griffin_Idle_08.png" type="Texture" id=15]
[ext_resource path="res://Assets/Griffin/Idle/Griffin_Idle_00.png" type="Texture" id=16]
[ext_resource path="res://Assets/Griffin/Idle/Griffin_Idle_10.png" type="Texture" id=17]
[ext_resource path="res://Assets/Griffin/Hurt/Griffin_Hurt_0.png" type="Texture" id=18]
[ext_resource path="res://Assets/Griffin/Attack/Griffin_Attack_07.png" type="Texture" id=19]
[ext_resource path="res://Assets/Griffin/Hurt/Griffin_Hurt_1.png" type="Texture" id=20]
[ext_resource path="res://Assets/Griffin/Run/Griffin_Run_6.png" type="Texture" id=21]
[ext_resource path="res://Assets/Griffin/Run/Griffin_Run_4.png" type="Texture" id=22]
[ext_resource path="res://Assets/Griffin/Death/Griffin_Death_07.png" type="Texture" id=23]
[ext_resource path="res://Assets/Griffin/Death/Griffin_Death_02.png" type="Texture" id=24]
[ext_resource path="res://Assets/Griffin/Attack/Griffin_Attack_12.png" type="Texture" id=25]
[ext_resource path="res://Assets/Griffin/Run/Griffin_Run_3.png" type="Texture" id=26]
[ext_resource path="res://Assets/Griffin/Death/Griffin_Death_00.png" type="Texture" id=27]
[ext_resource path="res://Assets/Griffin/Run/Griffin_Run_1.png" type="Texture" id=28]
[ext_resource path="res://Assets/Griffin/Death/Griffin_Death_08.png" type="Texture" id=29]
[ext_resource path="res://Assets/Griffin/Attack/Griffin_Attack_11.png" type="Texture" id=30]
[ext_resource path="res://Assets/Griffin/Attack/Griffin_Attack_09.png" type="Texture" id=31]
[ext_resource path="res://Assets/Griffin/Death/Griffin_Death_05.png" type="Texture" id=32]
[ext_resource path="res://Assets/Griffin/Death/Griffin_Death_01.png" type="Texture" id=33]
[ext_resource path="res://Assets/Griffin/Run/Griffin_Run_0.png" type="Texture" id=34]
[ext_resource path="res://Assets/Griffin/Death/Griffin_Death_10.png" type="Texture" id=35]
[ext_resource path="res://Assets/Griffin/Death/Griffin_Death_11.png" type="Texture" id=36]
[ext_resource path="res://Assets/Griffin/Death/Griffin_Death_04.png" type="Texture" id=37]
[ext_resource path="res://Assets/Griffin/Death/Griffin_Death_06.png" type="Texture" id=38]
[ext_resource path="res://Assets/Griffin/Run/Griffin_Run_5.png" type="Texture" id=39]
[ext_resource path="res://Assets/Griffin/Attack/Griffin_Attack_05.png" type="Texture" id=40]
[ext_resource path="res://Assets/Griffin/Run/Griffin_Run_2.png" type="Texture" id=41]
[ext_resource path="res://Assets/Griffin/Death/Griffin_Death_03.png" type="Texture" id=42]
[ext_resource path="res://Assets/Griffin/Hurt/Griffin_Hurt_2.png" type="Texture" id=43]
[ext_resource path="res://Assets/Griffin/Attack/Griffin_Attack_10.png" type="Texture" id=44]
[ext_resource path="res://Assets/Griffin/Death/Griffin_Death_09.png" type="Texture" id=45]
[ext_resource path="res://Assets/Griffin/DeathNoBlood/Griffin_DeathNoBlood_00.png" type="Texture" id=46]
[ext_resource path="res://Assets/Griffin/DeathNoBlood/Griffin_DeathNoBlood_01.png" type="Texture" id=47]
[ext_resource path="res://Assets/Griffin/Attack/Griffin_Attack_06.png" type="Texture" id=48]
[ext_resource path="res://Assets/Griffin/Attack/Griffin_Attack_08.png" type="Texture" id=49]
[ext_resource path="res://Assets/Griffin/DeathNoBlood/Griffin_DeathNoBlood_07.png" type="Texture" id=50]
[ext_resource path="res://Assets/Griffin/DeathNoBlood/Griffin_DeathNoBlood_10.png" type="Texture" id=51]
[ext_resource path="res://Assets/Griffin/DeathNoBlood/Griffin_DeathNoBlood_03.png" type="Texture" id=52]
[ext_resource path="res://Assets/Griffin/DeathNoBlood/Griffin_DeathNoBlood_08.png" type="Texture" id=53]
[ext_resource path="res://Assets/Griffin/DeathNoBlood/Griffin_DeathNoBlood_05.png" type="Texture" id=54]
[ext_resource path="res://Assets/Griffin/DeathNoBlood/Griffin_DeathNoBlood_06.png" type="Texture" id=55]
[ext_resource path="res://Assets/Griffin/DeathNoBlood/Griffin_DeathNoBlood_09.png" type="Texture" id=56]
[ext_resource path="res://Assets/Griffin/DeathNoBlood/Griffin_DeathNoBlood_02.png" type="Texture" id=57]
[ext_resource path="res://Assets/Griffin/DeathNoBlood/Griffin_DeathNoBlood_11.png" type="Texture" id=58]
[ext_resource path="res://Assets/Griffin/DeathNoBlood/Griffin_DeathNoBlood_04.png" type="Texture" id=59]
[ext_resource path="res://Actors/AI/Griffin.gd" type="Script" id=60]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 20 ), ExtResource( 43 ) ],
"loop": false,
"name": "hurt",
"speed": 8.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 33 ), ExtResource( 24 ), ExtResource( 42 ), ExtResource( 37 ), ExtResource( 32 ), ExtResource( 38 ), ExtResource( 23 ), ExtResource( 29 ), ExtResource( 45 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": false,
"name": "death",
"speed": 8.0
}, {
"frames": [ ExtResource( 46 ), ExtResource( 47 ), ExtResource( 57 ), ExtResource( 52 ), ExtResource( 59 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 50 ), ExtResource( 53 ), ExtResource( 56 ), ExtResource( 51 ), ExtResource( 58 ) ],
"loop": true,
"name": "death_no_blood",
"speed": 8.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 28 ), ExtResource( 41 ), ExtResource( 26 ), ExtResource( 22 ), ExtResource( 39 ), ExtResource( 21 ) ],
"loop": true,
"name": "run",
"speed": 14.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 40 ), ExtResource( 48 ), ExtResource( 19 ), ExtResource( 49 ), ExtResource( 31 ), ExtResource( 44 ), ExtResource( 30 ), ExtResource( 25 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42.3502, 19.3773 )

[sub_resource type="CircleShape2D" id=3]
radius = 272.456

[node name="Griffin" type="KinematicBody2D"]
position = Vector2( -1.62106, -14.1888 )
script = ExtResource( 60 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 8.69358, -21.7752 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.82065, 23.8015 )
shape = SubResource( 2 )

[node name="RivalArea2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RivalArea2"]
position = Vector2( 6.04627, 23.4116 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="Right_Cast" type="RayCast2D" parent="."]
show_behind_parent = true
position = Vector2( 37.6883, 14.6765 )
enabled = true
cast_to = Vector2( 23, 0 )
collision_mask = 3

[node name="Left_Cast" type="RayCast2D" parent="."]
show_behind_parent = true
position = Vector2( -22.2918, 16.838 )
enabled = true
cast_to = Vector2( -23, 0 )
collision_mask = 3
[connection signal="body_entered" from="RivalArea2" to="." method="_on_RivalArea2_body_entered"]
[connection signal="body_exited" from="RivalArea2" to="." method="_on_RivalArea2_body_exited"]
